5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4326/executions/1602_2895.log
== SUBMITION (2019-03-31 15:21:20) 
-- CODE:
njogos=in(input)("Quantos jogos a resem encomendados"))
var=flot(input)("Qual o valor de cada jogo"))
fret=flot(input)("Qual o valor do frete"))
total=(var*njogos)+frete
print(total)
-- EXECUTION TIME:
0.188555
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 1
    njogos=in(input)("Quantos jogos a resem encomendados"))
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:00) 
-- CODE:
njogos=in(input)("Quantos jogos a resem encomendados"))
var=float(input)("Qual o valor de cada jogo"))
fret=float(input)("Qual o valor do frete"))
total=(var*njogos)+frete
print(total)
-- EXECUTION TIME:
0.18794
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 1
    njogos=in(input)("Quantos jogos a resem encomendados"))
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:18) 
-- CODE:
njogos=int(input)("Quantos jogos a resem encomendados"))
var=float(input)("Qual o valor de cada jogo"))
fret=float(input)("Qual o valor do frete"))
total=(var*njogos)+frete
print(total)
-- EXECUTION TIME:
0.205076
-- ERROR:
  File "/home/codebench/codes/1602/2895/main.py", line 1
    njogos=int(input)("Quantos jogos a resem encomendados"))
                                                           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:43) 
-- CODE:
njogos=int(input("Quantos jogos a resem encomendados"))
var=float(input("Qual o valor de cada jogo"))
fret=float(input("Qual o valor do frete"))
total=(var*njogos)+frete
print(total)
-- EXECUTION TIME:
0.181782
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total=(var*njogos)+frete
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:22:49) 
-- CODE:
njogos=int(input("Quantos jogos a resem encomendados"))
var=float(input("Qual o valor de cada jogo"))
fret=float(input("Qual o valor do frete"))
total=(var*njogos)+frete
print(total)
-- EXECUTION TIME:
0.201403
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total=(var*njogos)+frete
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:23:21) 
-- CODE:
njogos=int(input("Quantos jogos a serem encomendados"))
var=float(input("Qual o valor de cada jogo"))
fret=float(input("Qual o valor do frete"))
total=(var*njogos)+frete
print(total)
-- EXECUTION TIME:
0.172908
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/2895/main.py", line 4, in <module>
    total=(var*njogos)+frete
NameError: name 'frete' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 15:23:32) 
-- CODE:
njogos=int(input("Quantos jogos a serem encomendados"))
var=float(input("Qual o valor de cada jogo"))
frete=float(input("Qual o valor do frete"))
total=(var*njogos)+frete
print(total)
-- EXECUTION TIME:
0.138324
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
